Fix layout issue

--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body {
 }
 .page {
   padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 /* Main */
 main {
